add the CBaseModelInfo* as 4th arg on fragCache::DrawSkeleton
I'm fully certain that the the function takes a pointer CBaseModelInfo as 4th arg

--- a/DismembermentASI/DismembermentASI.vcxproj
+++ b/DismembermentASI/DismembermentASI.vcxproj
@@ -192,6 +192,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
+    <ClInclude Include="rage\CBaseModelInfo.h" />
     <ClInclude Include="rage\CEntity.h" />
     <ClInclude Include="rage\CPed.h" />
     <ClInclude Include="rage\crSkeleton.h" />
