--- a/DismembermentASI/DismembermentASI.vcxproj.filters
+++ b/DismembermentASI/DismembermentASI.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClInclude Include="rage\CPed.h">
       <Filter>rage</Filter>
     </ClInclude>
+    <ClInclude Include="rage\CBaseModelInfo.h">
+      <Filter>rage</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
